Summer Sketches Part 3
Finished uploading summer sketches.
 - Testing stuff for gallery descriptions
 - Fixed alt text for home page icons
 - Renamed website index page.
 - Fixed sidebar links
 - New Thumbnails
 - Home Page Banner text
 - Discord Server invite

--- a/gallery/Gallery.html
+++ b/gallery/Gallery.html
@@ -40,13 +40,14 @@
       <p>
         <b>Welcome to my gallery!</b>
 
-	This is my semi-quality random image dump.  
-        You get to watch my drawing skills slowly improve.
-        I also post other pictures, like games of chess that I win.
+	This is my semi-quality random image dump.
+        Here you get to watch my drawing skills slowly improve.
+        I also post other random images and photos.  
+	I'd be delighted to here your feedback!  You can <a href="https://discord.gg/MrFeEXWhVr">join my discord here.</a>
+	<br>
+	Warning: High resolution images ahead.
       </p>
-      <p>
-        <b>Note:</b>Some of the pictures/scans are high-res, and take a long time to load.
-      </p>
+        
       <br>
     </section>
 
@@ -55,16 +56,28 @@
       <!-- ----- Start Gallery Table ----- -->
       <div class="Gallery">
 
-
-
-
-
 <figure onclick="Zoom3(this);">
   <img src="./Images/Small/2024-august-bedroom.png">
   <img src="./t.png" class="tp">
   <name>Bed Sketch</name>
   <date>August 2024</date>
   <disc></disc>
+</figure>
+
+<figure onclick="Zoom3(this);">
+  <img src="./Images/Small/jade_notext_2_cropped.png">
+  <img src="./t.png" class="tp">
+  <name>Jade from Recursion Comic</name>
+  <date>August 2024</date>
+  <disc>Jade is terrified of parties.<br><a href="https://recursioncomic.com/">Read the comic here!</a></disc>
+</figure>
+
+<figure onclick="Zoom3(this);">
+  <img src="./Images/Small/2024-july-stairs.png">
+  <img src="./t.png" class="tp">
+  <name>Vacant Warehouse</name>
+  <date>July 2024</date>
+  <disc>Unfinished Sketch.</disc>
 </figure>
 
 <figure onclick="Zoom3(this);">
@@ -84,14 +97,6 @@
 </figure>
 
 <figure onclick="Zoom3(this);">
-  <img src="./Images/Small/2024-june-overlook.png">
-  <img src="./t.png" class="tp">
-  <name>Overlook</name>
-  <date>June 2024</date>
-  <disc></disc>
-</figure>
-
-<figure onclick="Zoom3(this);">
   <img src="./Images/Small/2024-july-dragon.png">
   <img src="./t.png" class="tp">
   <name>Dragon Sketch</name>
@@ -99,21 +104,20 @@
   <disc>My sister helped me with this one.</disc>
 </figure>
 
-
 <figure onclick="Zoom3(this);">
-  <img src="./Images/Small/2024-june-fsy2.png">
+  <img src="./Images/Small/2024-june-overlook.png">
   <img src="./t.png" class="tp">
-  <name>FSY Sketches 2</name>
+  <name>Overlook</name>
   <date>June 2024</date>
-  <disc></disc>
+  <disc>I was drawing at Priest's Camp.</disc>
 </figure>
 
 <figure onclick="Zoom3(this);">
-  <img src="./Images/Small/jade_notext_2_cropped.png">
+  <img src="./Images/Small/2024-june-brother.png">
   <img src="./t.png" class="tp">
-  <name>Jade from Recursion Comic</name>
-  <date>August 2024</date>
-  <disc>Jade is terrified of parties.<br><a href="https://recursioncomic.com/">Read the comic here!</a></disc>
+  <name>Older Brother</name>
+  <date>June 2024</date>
+  <disc>I still don't know what to call these.</disc>
 </figure>
 
 <figure onclick="Zoom3(this);">
@@ -121,7 +125,31 @@
   <img src="./t.png" class="tp">
   <name>Chris</name>
   <date>June 2024</date>
-  <disc></disc>
+  <disc>First digital drawing of this guy.  My sister added the water.</disc>
+</figure>
+
+<figure onclick="Zoom3(this);">
+  <img src="./Images/Small/2024-june-fsy3.png">
+  <img src="./t.png" class="tp">
+  <name>FSY Sketches 3</name>
+  <date>June 2024</date>
+  <disc>The third page.  My friend drew some weapons.</disc>
+</figure>
+
+<figure onclick="Zoom3(this);">
+  <img src="./Images/Small/2024-june-fsy2.png">
+  <img src="./t.png" class="tp">
+  <name>FSY Sketches 2</name>
+  <date>June 2024</date>
+  <disc>The second page, where I gave them ears.</disc>
+</figure>
+
+<figure onclick="Zoom3(this);">
+  <img src="./Images/Small/2024-june-fsy1.png">
+  <img src="./t.png" class="tp">
+  <name>FSY Sketches 1</name>
+  <date>June 2024</date>
+  <disc>The first of a series of sketches I drew at FSY.</disc>
 </figure>
 
 <figure onclick="Zoom3(this);">
