--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Index - Feltrush Laundry</title>
+    <title>Home - Feltrush Laundry</title>
     
     <meta charset="UTF-8">
     <meta name="description" content="">
@@ -23,7 +23,7 @@
         </div><iframe src="/utility/sidebar/global.html" title="Site-wide Sidebar Iframe"></iframe>
         <div class="Puller"></div>
     </div>
-    <div class="Topbar"></div>
+    <div class="Topbar"><a href="/gallery/Gallery.html">Summer Sketch Upload!</a></div>
     <page class="MainContent">
         <section>
             <div class="Title">
@@ -44,9 +44,9 @@
 		
                 <div class="icon-list">
                     <a href="https://github.com/DeverellManning" title="Github"><img src="/assets/images/icons/github-mark.svg" alt="Github Account"></a>
-                    <a href="https://openprocessing.org/user/396382" title="Open Processing"><img src="/assets/images/icons/open-processing-logo.png" alt=""></a>
+                    <a href="https://openprocessing.org/user/396382" title="OpenProcessing"><img src="/assets/images/icons/open-processing-logo.png" alt=""></a>
                     <a href="/projects/perchance.html" title="Perchance Hub"><img src="/assets/images/icons/perchance-icon.jpg"></a>
-	            <a href="https://www.wikidot.com/user:info/deverell-manning" title="Github"><img src="/assets/images/icons/wikidot-logo.png"></a>
+	            <a href="https://www.wikidot.com/user:info/deverell-manning" title="Wikidot"><img src="/assets/images/icons/wikidot-logo.png"></a>
 
                 </div>
             </div>
@@ -58,9 +58,9 @@
 		<h3 style="margin-top: 0.5em; margin-bottom: 0.5em;">Status</h3>
 		<div class="scroll-box">
 		<p>
+[100%] Summer Sketch Upload</br>
 [70%] Papers System<br>
 [0%] Move to xepher.net<br>
-
 		</p>
 		</div>
 	    </div>
