--- a/utility/sidebar/sidenav.html
+++ b/utility/sidebar/sidenav.html
@@ -5,10 +5,10 @@
 <h3>Navigation</h3>
 <ul>
 <li><a href="/">Main Page</a></li>
-<li><a href="/Gallery/Gallery.html">Gallery</a>
-<li><a href="/">Papers</a></li>
-<li><a href="/Projects.html ">Projects</a></li>
-<li><a href="/Community.html ">Community Page</a></li>
-<li><a href="/About.html">About</a></li>
+<li><a href="/gallery/Gallery.html">Gallery</a>
+<li><a href="/papers/">Papers</a></li>
+<li><a href="/projects/">Projects</a></li>
+<li><a href="/community.html ">Community Page</a></li>
+<li><a href="/about.html">About</a></li>
 </ul>
 </body></html>
