Update About Page

--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
         <section>
 	<h3>A brief history of Feltrush Laundry</h3>
 	<p>In October of 2020, I started my website as DeverellManning.github.io.  I found Github Pages as a free web host.  That's when I made my github account.  Four years, that was all I used Github for.  In addition, my knowledge of Web Development and Servers was at a -- beginers level.  Soon, I realized that Github pages had limitations.  Like, it's just a web server.  I don't have access to it, just a static website in a git repo.  That was all fine at the time, but eventually I wanted to move.</p>
-	<p>During those 4 years, I learned many things.  This website went through several iterations.  It now looks fancier than ever.  Although I wrote a great style sheet, it has been seriously lacking in content.  Prior to the move to xepher.net, I spent a week redesigning the entire site.  In order to solve my content problem, I decided I needed to do two things.  One, open up my site to a much larger vareity of content, and Two, creating a system to quickly create new pages with out spending so much time manging everything.  That pretty much brings us up to date, I'm looking forward to the move!</p>
+	<p>During those 4 years, I learned many things.  This website went through several iterations.  It now looks fancier than ever.  Although I wrote a great style sheet, it has been seriously lacking in content.  In the summer of 2024, I spent a week redesigning the entire site.  In order to solve my content problem, I decided I needed to do two things.  one, open up my site to a much larger variety of content, and two, creating a system to quickly create new pages with out spending so much time manging everything.  That pretty much brings us up to date, I'm looking forward toward the future!</p>
         </section>
 
         <section class="Footer">
@@ -78,7 +78,7 @@
             <quote>"Imagine break-dancing penguins sliding down an icy hillside rapping an opera.</quote>
             <address><a href="deverellmanning.github.io">deverellmanning.github.io</a></address>
             <br />
-            <hi>Last Updated: 7/03/2024</hi>
+            <hi>Last Updated: 3/10/2025</hi>
             <hr />
         </section>
 
